--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+lpp_api_key="d2f0c381-6072-45f9-a05e-513f1515dd6a"
 
