--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,9 +42,18 @@ dependencies {
     implementation 'com.github.zagum:Android-ExpandIcon:1.2.1'
     implementation 'com.google.android:flexbox:1.1.1'
 
+    // Add the Firebase SDK for Google Analytics
+    implementation 'com.google.firebase:firebase-analytics:17.2.1'
+
+    // Add the SDKs for any other Firebase products you want to use in your app
+    // For example, to use Firebase Authentication and Cloud Firestore
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     // Jsoup library
     implementation 'org.jsoup:jsoup:1.12.1'
     // Gson library
     implementation 'com.google.code.gson:gson:2.8.5'
 }
+
+apply plugin: 'com.google.gms.google-services'
