--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    implementation 'com.facebook.android:facebook-login:[5,6)'
+
     // Jsoup library
     implementation 'org.jsoup:jsoup:1.12.1'
     // Gson library
