--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.github.andrefrsousa:SuperBottomSheet:1.3.0'
     implementation 'com.github.zagum:Android-ExpandIcon:1.2.1'
     implementation 'com.google.android:flexbox:1.1.1'
-
+    implementation 'com.github.Ferfalk:SimpleSearchView:0.1.4'
 
     // Jsoup library
     implementation 'org.jsoup:jsoup:1.12.1'
