--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
-    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.facebook.android:facebook-login:5.8.0'
 
     // Jsoup library
     implementation 'org.jsoup:jsoup:1.12.1'
     // Gson library
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
