--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     // Gson library
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'biz.laenger.android:vpbs:0.0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
