--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url "https://raw.github.com/laenger/maven-releases/master/releases" }
     }
 }
 
