--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'android.arch.lifecycle:extensions:1.1.1'
@@ -41,25 +41,21 @@ dependencies {
     implementation 'com.github.andrefrsousa:SuperBottomSheet:1.3.0'
     implementation 'com.github.zagum:Android-ExpandIcon:1.2.1'
     implementation 'com.google.android:flexbox:1.1.1'
-
     // Add the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics:17.2.1'
-
     // Add the SDKs for any other Firebase products you want to use in your app
     // For example, to use Firebase Authentication and Cloud Firestore
     implementation 'com.google.firebase:firebase-auth:19.1.0'
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
-
     implementation 'com.facebook.android:facebook-login:5.8.0'
-
     // Jsoup library
     implementation 'org.jsoup:jsoup:1.12.1'
     // Gson library
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'biz.laenger.android:vpbs:0.0.5'
-
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation files('libs/joda-time-2.10.5.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
