--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'biz.laenger.android:vpbs:0.0.5'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+
+    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
     implementation files('libs/joda-time-2.10.5.jar')
 }
 
