--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
+    <!--
+    maybe remove that.
+    -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="false"
         android:label="@string/app_name"
@@ -18,7 +24,9 @@
         android:theme="@style/DarkTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activities.PostActivity"></activity>
+        <activity android:name=".ui.activities.TestActivity"
+            android:exported="true"></activity>
+        <activity android:name=".ui.activities.PostActivity" />
         <activity android:name=".ui.activities.ForumActivity" />
         <activity android:name=".ui.activities.SettingsActivity" />
         <activity
