--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,11 +10,8 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <!--
-    maybe remove that.
-    -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <!--     maybe remove that. -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -24,8 +21,13 @@
         android:theme="@style/DarkTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activities.TestActivity"
-            android:exported="true"></activity>
+        <activity
+            android:name=".ui.activities.NewMessageActivity"
+            android:exported="true"
+            android:theme="@style/DarkTheme"/>
+        <activity
+            android:name=".ui.activities.TestActivity"
+            android:exported="true" />
         <activity android:name=".ui.activities.PostActivity" />
         <activity android:name=".ui.activities.ForumActivity" />
         <activity android:name=".ui.activities.SettingsActivity" />
