--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.github.amalChandran:trail-android:v1.51'
     implementation files('libs/joda-time-2.10.5.jar')
 
 }
