--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
 
     implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.elyeproj.libraries:loaderviewlibrary:2.0.0'
 
 }
 
