--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,10 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
 
-        <activity android:name=".ui.activities.LauncherActivity"
+        <activity
+            android:name=".ui.activities.LauncherActivity"
             android:exported="true"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/DarkTheme">
             <intent-filter>
@@ -29,25 +31,27 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activities.forum.TagMessageActivity"
+        <activity
+            android:name=".ui.activities.forum.TagMessageActivity"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activities.forum.TagsActivity"
+        <activity
+            android:name=".ui.activities.forum.TagsActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activities.forum.NewMessageActivity"
-            android:exported="true"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activities.TestActivity"
             android:exported="true"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activities.forum.PostActivity"
+        <activity
+            android:name=".ui.activities.forum.PostActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activities.forum.ForumActivity"
-            android:exported="true"
             android:screenOrientation="portrait"/>
-        <activity android:name=".ui.activities.SettingsActivity"
+        <activity
+            android:name=".ui.activities.SettingsActivity"
             android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.activities.WelcomeActivity"
@@ -66,9 +70,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.MainActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activities.forum.SignInActivity"
             android:exported="true"
