Added new Lpp exception handling

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,5 @@ android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 lpp_api_key="D2F0C381-6072-45F9-A05E-513F1515DD6A"
+travana_api_key="mlrX6m18wsmb8UF9dQd0wcYxhE47UyYc"
 
