--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 
     buildTypes.each {
         it.buildConfigField 'String', 'LPP_API_KEY', lpp_api_key
+        it.buildConfigField 'String', 'TRAVANA_API_KEY', travana_api_key
     }
 }
 
