--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/WhiteTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ui.activities.forum.DetourActivity" />
+        <activity android:name=".ui.activities.DetourActivity" />
         <activity android:name=".ui.activities.lpp.BusActivity" />
         <activity
             android:name=".ui.activities.AboutActivity"
@@ -55,24 +55,6 @@
         <activity
             android:name=".ui.activities.lpp.StationActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name="com.facebook.FacebookActivity"
-            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait" />
-        <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
 
         <meta-data
             android:name="preloaded_fonts"
