--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/WhiteTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".ui.activities.WebViewActivity"
+            android:label="@string/title_activity_web_view"
+            android:theme="@style/WhiteTheme.NoActionBar"></activity>
         <activity android:name=".ui.activities.DetourActivity" />
         <activity android:name=".ui.activities.lpp.BusActivity" />
         <activity
@@ -59,9 +63,6 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
     </application>
 
 </manifest>
