--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,6 @@ android {
         versionName "1.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField 'String', 'LPP_API_KEY', lpp_api_key
-        buildConfigField 'String', 'TRAVANA_API_KEY', travana_api_key
     }
     buildTypes {
 
@@ -43,28 +42,22 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.2.2'
-    implementation 'androidx.navigation:navigation-ui:2.2.2'
+    implementation 'androidx.navigation:navigation-fragment:2.3.4'
+    implementation 'androidx.navigation:navigation-ui:2.3.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.github.andrefrsousa:SuperBottomSheet:1.3.0'
     implementation 'com.github.zagum:Android-ExpandIcon:1.2.1'
     implementation 'com.google.android:flexbox:1.1.1'
-    // Add the Firebase SDK for Google Analytics
     implementation 'com.google.firebase:firebase-analytics:18.0.2'
-    // Jsoup library
-    implementation 'org.jsoup:jsoup:1.13.1'
-    // Gson library
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'biz.laenger.android:vpbs:0.0.5'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
-    implementation 'de.hdodenhof:circleimageview:3.0.1'
-
 
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
-    implementation files('libs/joda-time-2.10.5.jar')
+    implementation group: 'joda-time', name: 'joda-time', version: '2.10.5'
 
     implementation 'com.jakewharton:butterknife:10.2.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
