--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:name=".TravanaApp"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher_dark"
         android:label="@string/app_name"
