--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'biz.laenger.android:vpbs:0.0.5'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'androidx.webkit:webkit:1.3.0'
 
     implementation 'com.squareup.okhttp3:okhttp:4.8.0'
     implementation group: 'joda-time', name: 'joda-time', version: '2.10.5'
