--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.7.10'
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath 'com.google.gms:google-services:4.3.14'
         classpath 'com.jakewharton:butterknife-gradle-plugin:10.2.0'
@@ -18,9 +21,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven {
-            url "https://maven.google.com"
-        }
+        maven { url "https://maven.google.com" }
         maven { url 'https://jitpack.io' }
         maven { url "https://raw.github.com/laenger/maven-releases/master/releases" }
     }
