--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,14 +6,12 @@ plugins {
 
 android {
 
-    compileSdkVersion 33
-    buildToolsVersion '30.0.3'
-
     defaultConfig {
+        compileSdk 33
         applicationId "com.VegaSolutions.lpptransit"
         minSdkVersion 21
-        targetSdkVersion 33
-        versionCode 46
+        targetSdkVersion 34
+        versionCode 47
         versionName "2.2.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField 'String', 'LPP_API_KEY', lpp_api_key
