Upgraded location manager (LocationProvider)

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,12 @@ android {
 
     compileOptions {
         coreLibraryDesugaringEnabled true
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlin {
+        jvmToolchain(17)
     }
 
     defaultConfig {
